# WASI-Virt

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build-adapter.sh  build.rs  rust-toolchain.toml  update-wasi.sh
.github/: dependabot.yml
.github/workflows/: main.yml
lib/: package-0.2.1.wasm  package-0_2_3.wasm  package-wasi0_2_1.wasm  package-wasi0_2_3.wasm  package.wasm  virtual_adapter-wasi0_2_1.debug.wasm  virtual_adapter-wasi0_2_1.wasm  virtual_adapter-wasi0_2_3.debug.wasm  virtual_adapter-wasi0_2_3.wasm  virtual_adapter.debug.wasm  virtual_adapter.wasm  wasi_snapshot_preview1.reactor.wasm
src/: data.rs  env.rs  lib.rs  mutator.rs  stub_preview1.rs  virt_config.rs  virt_deny.rs  virt_env.rs  virt_fs.rs  virt_io.rs  walrus_ops.rs
src/virt_deny/: clocks.rs  exit.rs  http.rs  mod.rs  random.rs  sockets.rs
src/virt_io/: clocks.rs  filesystem.rs  http.rs  io.rs  mod.rs  sockets.rs  stdio.rs
tests/: virt.rs
tests/cases/: config-allow.toml  config-deny.toml  config-none-overrides.toml  config-none.toml  config-passthrough.toml  encapsulate-component.toml  encapsulate-none.toml  encapsulate.toml  env-allow.toml  env-deny.toml  env-none-overrides.toml  env-none.toml  env-passthrough.toml  fs-dir-read.toml  fs-file-read.toml  fs-host-dir-read.toml  fs-host-read.toml  fs-inner-read.toml  fs-nested-dir-read.toml  fs-passive-file-read.toml  fs-preopen-read.toml  fs-virt-dir-read.toml  passthrough.toml  stdio.toml
tests/components/do-everything/: Cargo.toml
tests/components/do-everything/src/: lib.rs
tests/components/file-read/: Cargo.toml
tests/components/file-read/src/: lib.rs
tests/components/get-config/: Cargo.toml
tests/components/get-config/src/: lib.rs
tests/components/get-env/: Cargo.toml
tests/components/get-env/src/: lib.rs
tests/components/stdio/: Cargo.toml
tests/components/stdio/src/: lib.rs
virtual-adapter/: Cargo.toml
virtual-adapter/src/: config.rs  env.rs  fs.rs  io.rs  lib.rs
wit/: virt.wit
wit/0_2_3/: virt.wit
