[package]
name = "wasi-virt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[[bin]]
name = "wasi-virt"

[workspace]
exclude = ["testapp"]
members = [
  "virtual-adapter",
  "tests/components/do-everything",
  "tests/components/file-read",
  "tests/components/get-env",
  "tests/components/stdio",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walrus = "0.20.3"
wasm-compose = "0.5.5"
wasm-metadata = "0.10.20"
wasm-opt = { version = "0.116.0", optional = true }
wit-component = "0.21.0"

[build-dependencies]
anyhow = "1"

[dev-dependencies]
anyhow = "1"
cap-std = "2.0.0"
heck = { version = "0.4" }
tokio = { version = "1.30.0", features = ["macros"] }
wasmtime = { version = "17.0.1", features = ["component-model"] }
wasmtime-wasi = "17.0.1"
wasmparser = "0.121.2"

[workspace.dependencies]
anyhow = "1"
wit-bindgen = "0.25.0"

[features]
default = ["wasm-opt"]
# Optimize the generated virtual adapter with wasm-opt to reduce its size.
# If you allow all WASI subsystems, this feature doesn't make much difference.
wasm-opt = ["dep:wasm-opt"]
