[package]
name = "wasi-virt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[[bin]]
name = "wasi-virt"

[workspace]
exclude = ["testapp"]
members = [
  "virtual-adapter",
  "tests/components/do-everything",
  "tests/components/file-read",
  "tests/components/get-config",
  "tests/components/get-env",
  "tests/components/stdio",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walrus = "0.22.0"
wasm-compose = "0.219"
wasm-metadata = "0.217"
wasm-opt = { version = "0.116.1", optional = true }
wit-component = "0.217"
wit-parser = "0.217"

[build-dependencies]
anyhow = "1"

[dev-dependencies]
anyhow = "1"
cap-std = "3.3.0"
heck = { version = "0.5" }
tokio = { version = "1.42", features = ["macros"] }
wasmtime = { version = "27", features = ["component-model"] }
wasmtime-wasi = { version = "27" }
wasmtime-wasi-config = { version = "27" }
wasmparser = "0.220.0"

[workspace.dependencies]
anyhow = "1"
wit-bindgen = "0.32"

[features]
default = ["wasm-opt"]
# Optimize the generated virtual adapter with wasm-opt to reduce its size.
# If you allow all WASI subsystems, this feature doesn't make much difference.
wasm-opt = ["dep:wasm-opt"]
